LPS-77183 Refactor to use new settings

--- a/modules/apps/foundation/users-admin/users-admin-web/src/main/resources/META-INF/resources/add_menu.jspf
+++ b/modules/apps/foundation/users-admin/users-admin-web/src/main/resources/META-INF/resources/add_menu.jspf
@@ -34,7 +34,7 @@ boolean hasAddUserPermission = PortalPermissionUtil.contains(permissionChecker, 
 		<c:if test="<%= hasAddOrganizationPermission %>">
 
 			<%
-			for (String organizationType : PropsValues.ORGANIZATIONS_TYPES) {
+			for (String organizationType : organizationsTypes) {
 			%>
 
 				<portlet:renderURL var="addOrganizationURL">
