LPS-77183 users-admin-web - jsp - fix broken vars

--- a/modules/apps/foundation/users-admin/users-admin-web/src/main/resources/META-INF/resources/add_menu.jspf
+++ b/modules/apps/foundation/users-admin/users-admin-web/src/main/resources/META-INF/resources/add_menu.jspf
@@ -34,7 +34,7 @@ boolean hasAddUserPermission = PortalPermissionUtil.contains(permissionChecker, 
 		<c:if test="<%= hasAddOrganizationPermission %>">
 
 			<%
-			for (String organizationType : organizationsTypes) {
+			for (String organizationType : OrganizationLocalServiceUtil.getTypes()) {
 			%>
 
 				<portlet:renderURL var="addOrganizationURL">
