LPS-77880 Show notification body when not applicable

--- a/modules/apps/collaboration/notifications/notifications-web/src/main/resources/META-INF/resources/notifications/user_notification_entry.jspf
+++ b/modules/apps/collaboration/notifications/notifications-web/src/main/resources/META-INF/resources/notifications/user_notification_entry.jspf
@@ -50,6 +50,11 @@ if (notificationUnread) {
 			<liferay-ui:message key="notification-no-longer-applies" />
 		</liferay-ui:search-container-column-text>
 	</c:when>
+	<c:when test="<%= !userNotificationFeedEntry.isApplicable() %>">
+		<liferay-ui:search-container-column-text colspan="<%= 2 %>">
+			<liferay-ui:message key="<%= userNotificationFeedEntry.getBody() %>" />
+		</liferay-ui:search-container-column-text>
+	</c:when>
 	<c:otherwise>
 		<portlet:actionURL name="markNotificationAsRead" var="markNotificationAsReadURL">
 			<portlet:param name="userNotificationEventId" value="<%= String.valueOf(userNotificationEvent.getUserNotificationEventId()) %>" />
