LPS-78185 Add link to be able to set focus for site navigation menu item div

--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/META-INF/resources/css/SiteNavigationMenuEditor.scss
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/META-INF/resources/css/SiteNavigationMenuEditor.scss
@@ -9,6 +9,21 @@
 			box-shadow: none;
 			outline: 2px solid #65B6F0;
 		}
+
+		.site-navigation-menu-item-link:focus {
+			box-shadow: none;
+			outline: none;
+
+			& + div.site-navigation-menu-item .card{
+				box-shadow: none;
+				outline: 2px solid #BABFCE;
+			}
+
+			& + div.site-navigation-menu-item.selected .card{
+				box-shadow: none;
+				outline: 2px solid #65B6F0;
+			}
+		}
 	}
 
 	.container-item--nested {
