LPS-78164 Place msg error closer to the grid because Clay class has a big margin

--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-renderer/src/main/resources/META-INF/resources/css/main.scss
@@ -170,6 +170,9 @@
 }
 
 .liferay-ddm-form-field-grid {
+	.table {
+		margin-bottom: 0.1rem;
+	}
 	th, td:not(:first-child) {
 		text-align: center;
 	}
