LPS-78245 Show FragmentEntryLink controls when it is being focused

--- a/modules/apps/web-experience/layout/layout-admin-web/src/main/resources/META-INF/resources/css/fragments_editor/FragmentEntryLink.scss
+++ b/modules/apps/web-experience/layout/layout-admin-web/src/main/resources/META-INF/resources/css/fragments_editor/FragmentEntryLink.scss
@@ -19,6 +19,8 @@
 	z-index: 1000;
 }
 
+.fragment-entry-link-wrapper:focus,
+.fragment-entry-link-wrapper:focus-within,
 .fragment-entry-link-wrapper:hover {
 	box-shadow: 0 0 0 1px #6FA0FF;
 
