LPS-78245 Use tbar lexicon component for FragmentEntryLink control

--- a/modules/apps/web-experience/layout/layout-admin-web/src/main/resources/META-INF/resources/css/fragments_editor/FragmentEntryLink.scss
+++ b/modules/apps/web-experience/layout/layout-admin-web/src/main/resources/META-INF/resources/css/fragments_editor/FragmentEntryLink.scss
@@ -11,12 +11,17 @@
 	box-shadow: 0 0 0 1px #6FA0FF;
 	left: 0;
 	opacity: 0;
+	padding: 0.5em 1em;
 	pointer-events: none;
 	position: absolute;
 	transform: translateY(100%);
 	transition: transform ease 0.6s, opacity ease 0.2s;
 	width: 100%;
 	z-index: 1000;
+
+	&__fragment-name {
+		text-align: left;
+	}
 }
 
 .fragment-entry-link-wrapper:focus,
