LPS-78142 Adjust drag and drop layout for the column doesn't break when it has more of one field

--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/css/_form-builder-drag-and-drop.scss
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/css/_form-builder-drag-and-drop.scss
@@ -59,6 +59,10 @@
 			width: 78px;
 
 			@include transition(all ease 0.3s);
+
+			button:first-child {
+				margin-right: 5px;
+			}
 		}
 
 		&.hovered-field {
@@ -69,7 +73,7 @@
 				cursor: default;
 			}
 
-			.lfr-ddm-field-actions-container {
+			.form-builder-field:hover .lfr-ddm-field-actions-container {
 				opacity: 1;
 				visibility: visible;
 			}
