LPS-78141 Adjust form-builder-field class for the Drag and drop respect field alignment when user dragging field

--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/css/_form-builder-drag-and-drop.scss
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/css/_form-builder-drag-and-drop.scss
@@ -116,6 +116,10 @@ div.sortable-layout-drag-indicator {
 			margin-bottom: 2px;
 		}
 	}
+
+	.form-builder-field label {
+		float: initial;
+	}
 }
 
 .form-builder-field-list .form-builder-field:hover, .form-builder-field-list,
