--- a/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/css/_form-builder-drag-and-drop.scss
+++ b/modules/apps/forms-and-workflow/dynamic-data-mapping/dynamic-data-mapping-form-builder/src/main/resources/META-INF/resources/css/_form-builder-drag-and-drop.scss
@@ -46,7 +46,7 @@
 		border-left-width: 0;
 		border-right-width: 0;
 		box-shadow: inset 5px 0 0 transparent, inset -5px 0 0 transparent;
-		padding: 0 20px 0 20px;
+		padding: 0 20px;
 
 		@include transition(border ease-out 0.3s, box-shadow ease-out 0.3s);
 
@@ -54,7 +54,7 @@
 			opacity: 0;
 			position: absolute;
 			right: 0;
-			top: calc(-32px/2);
+			top: calc(-32px / 2);
 			visibility: hidden;
 			width: 78px;
 
@@ -101,7 +101,7 @@ div.sortable-layout-drag-indicator {
 }
 
 .yui3-dd-proxy {
-	border: none!important;
+	border: none !important;
 
 	.list-group-item {
 		background-color: $light;
@@ -122,17 +122,19 @@ div.sortable-layout-drag-indicator {
 	}
 }
 
-.form-builder-field-list .form-builder-field:hover, .form-builder-field-list,
+.form-builder-field-list .form-builder-field:hover,
+.form-builder-field-list,
 .lfr-ddm-form-builder-draggable-item {
-	cursor: -webkit-grab!important;
-	cursor: -moz-grab!important;
-	cursor: grab!important;
+	cursor: -webkit-grab !important;
+	cursor: -moz-grab !important;
+	cursor: grab !important;
 }
 
-.yui3-dd-shim, .yui3-dd-proxy {
-	cursor: -webkit-grabbing!important;
-	cursor: -moz-grabbing!important;
-	cursor: grabbing!important;
+.yui3-dd-shim,
+.yui3-dd-proxy {
+	cursor: -webkit-grabbing !important;
+	cursor: -moz-grabbing !important;
+	cursor: grabbing !important;
 }
 
 @include respond-to(phone) {
