LPS-77880 If notification is not applicable it should have be unread style either

--- a/modules/apps/collaboration/notifications/notifications-web/src/main/resources/META-INF/resources/notifications/user_notification_entry.jspf
+++ b/modules/apps/collaboration/notifications/notifications-web/src/main/resources/META-INF/resources/notifications/user_notification_entry.jspf
@@ -23,7 +23,9 @@ boolean anonymous = jsonObject.getBoolean("anonymous");
 
 long userNotificationEventUserId = jsonObject.getLong("userId");
 
-boolean notificationUnread = !actionRequired && !userNotificationEvent.isArchived();
+boolean applicable = userNotificationFeedEntry.isApplicable();
+
+boolean notificationUnread = !actionRequired && !userNotificationEvent.isArchived() && applicable;
 
 if (notificationUnread) {
 	row.setCssClass("unread");
@@ -50,7 +52,7 @@ if (notificationUnread) {
 			<liferay-ui:message key="notification-no-longer-applies" />
 		</liferay-ui:search-container-column-text>
 	</c:when>
-	<c:when test="<%= !userNotificationFeedEntry.isApplicable() %>">
+	<c:when test="<%= !applicable %>">
 		<liferay-ui:search-container-column-text colspan="<%= 2 %>">
 			<liferay-ui:message key="<%= userNotificationFeedEntry.getBody() %>" />
 		</liferay-ui:search-container-column-text>
