--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/META-INF/resources/css/SiteNavigationMenuEditor.scss
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/META-INF/resources/css/SiteNavigationMenuEditor.scss
@@ -10,16 +10,16 @@
 			outline: 2px solid #65B6F0;
 		}
 
-		.site-navigation-menu-item-link:focus {
+		&:focus {
 			box-shadow: none;
 			outline: none;
 
-			& + div.site-navigation-menu-item .card{
+			.site-navigation-menu-item .card {
 				box-shadow: none;
 				outline: 2px solid #BABFCE;
 			}
 
-			& + div.site-navigation-menu-item.selected .card{
+			.site-navigation-menu-item.selected .card {
 				box-shadow: none;
 				outline: 2px solid #65B6F0;
 			}
