LPS-77751 Apply confirmation boxes to kabab menu actions

--- a/modules/apps/foundation/user-associated-data/user-associated-data-web/src/main/resources/META-INF/resources/user_associated_data_entity_type_sidebar_action.jspf
+++ b/modules/apps/foundation/user-associated-data/user-associated-data-web/src/main/resources/META-INF/resources/user_associated_data_entity_type_sidebar_action.jspf
@@ -19,28 +19,33 @@
 		<portlet:param name="mvcActionCommand" value="/user_associated_data/auto_anonymize_user_associated_data" />
 		<portlet:param name="uadRegistryKey" value="<%= manageUserAssociatedDataEntitiesDisplay.getUADRegistryKey() %>" />
 		<portlet:param name="selUserId" value="<%= String.valueOf(selUserId) %>" />
+		<portlet:param name="redirect" value="<%= currentURL %>" />
 	</portlet:actionURL>
 
 	<liferay-ui:icon
 		message="auto-anonymize-all"
-		url="<%= autoAnonymizeURL %>"
+		onClick='<%= renderResponse.getNamespace() + "confirmAction('" + autoAnonymizeURL.toString() + "', '" + LanguageUtil.get(request, "are-you-sure-you-want-to-anonymize-all-associated-entities") + "')" %>'
+		url="javascript:;"
 	/>
 
 	<portlet:actionURL name="/user_associated_data/delete_user_associated_data" var="deleteURL">
 		<portlet:param name="mvcActionCommand" value="/user_associated_data/delete_user_associated_data" />
 		<portlet:param name="uadRegistryKey" value="<%= manageUserAssociatedDataEntitiesDisplay.getUADRegistryKey() %>" />
 		<portlet:param name="selUserId" value="<%= String.valueOf(selUserId) %>" />
+		<portlet:param name="redirect" value="<%= currentURL %>" />
 	</portlet:actionURL>
 
 	<liferay-ui:icon
 		message="delete-all"
-		url="<%= deleteURL %>"
+		onClick='<%= renderResponse.getNamespace() + "confirmAction('" + deleteURL.toString() + "', '" + LanguageUtil.get(request, "are-you-sure-you-want-to-delete-all-associated-entities") + "')" %>'
+		url="javascript:;"
 	/>
 
 	<portlet:actionURL name="/user_associated_data/export_user_associated_data" var="exportURL">
 		<portlet:param name="mvcActionCommand" value="/user_associated_data/export_user_associated_data" />
 		<portlet:param name="uadRegistryKey" value="<%= manageUserAssociatedDataEntitiesDisplay.getUADRegistryKey() %>" />
 		<portlet:param name="selUserId" value="<%= String.valueOf(selUserId) %>" />
+		<portlet:param name="redirect" value="<%= currentURL %>" />
 	</portlet:actionURL>
 
 	<liferay-ui:icon
