LPS-78674 user-associated-data-web - jsp - uses "component-action" css class to match the action menu design

--- a/modules/apps/foundation/user-associated-data/user-associated-data-web/src/main/resources/META-INF/resources/user_associated_data_entity_type_sidebar_action.jspf
+++ b/modules/apps/foundation/user-associated-data/user-associated-data-web/src/main/resources/META-INF/resources/user_associated_data_entity_type_sidebar_action.jspf
@@ -14,7 +14,14 @@
  */
 --%>
 
-<liferay-ui:icon-menu direction="left-side" icon="<%= StringPool.BLANK %>" markupView="lexicon" message="<%= StringPool.BLANK %>" showWhenSingleIcon="<%= true %>">
+<liferay-ui:icon-menu
+	direction="left-side"
+	icon="<%= StringPool.BLANK %>"
+	markupView="lexicon"
+	message="<%= StringPool.BLANK %>"
+	showWhenSingleIcon="<%= true %>"
+	triggerCssClass="component-action"
+>
 	<portlet:actionURL name="/user_associated_data/auto_anonymize_user_associated_data" var="autoAnonymizeURL">
 		<portlet:param name="redirect" value="<%= currentURL %>" />
 		<portlet:param name="selUserId" value="<%= String.valueOf(selUserId) %>" />
