LPS-78674 user-associated-data-web - uses proper lang key

--- a/modules/apps/foundation/user-associated-data/user-associated-data-web/src/main/resources/META-INF/resources/user_associated_data_entity_type_sidebar_action.jspf
+++ b/modules/apps/foundation/user-associated-data/user-associated-data-web/src/main/resources/META-INF/resources/user_associated_data_entity_type_sidebar_action.jspf
@@ -29,7 +29,7 @@
 	</portlet:actionURL>
 
 	<liferay-ui:icon
-		message="auto-anonymize-all"
+		message="anonymize"
 		onClick='<%= renderResponse.getNamespace() + "confirmAction('" + autoAnonymizeURL.toString() + "', '" + UnicodeLanguageUtil.get(request, "are-you-sure-you-want-to-anonymize-all-associated-entities") + "')" %>'
 		url="javascript:;"
 	/>
